# OpenNotebookAgent

./: .gitignore  NOTICE  README.md  manifest.json  pyproject.toml
scripts/: build_brxt.sh
skills/open-notebook-research/: SKILL.md
src/opennotebookagent/: __init__.py  __main__.py  cli.py  server.py
